took away status, shows city location, fixed marker stretch

--- a/src/app/tab2/physicalmap/physicalmap.component.scss
+++ b/src/app/tab2/physicalmap/physicalmap.component.scss
@@ -122,6 +122,13 @@
   overflow-y: scroll;
 }
 
+:host ::ng-deep .person-location{
+  width: 30px;
+  height: 30px;
+  background-size: cover !important;
+  background-position: center !important;
+}
+
 .overlaycontainer {
   position: absolute; z-index: 3; width: 100%
 }
